# agent-mesh

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  justfile  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml  release.yml
agent-mesh-bus/: Cargo.toml  README.md
agent-mesh-bus/examples/: bus_dispatch.rs  nats_dispatch.rs
agent-mesh-bus/src/: bus.rs  error.rs  inbox.rs  lib.rs  pyo3_module.rs  replay.rs  reply.rs  topic.rs
agent-mesh-bus/tests/: bus_roundtrip.rs
agent-mesh-cli/: Cargo.toml  README.md
agent-mesh-cli/src/: announce.rs  bind.rs  keygen.rs  lib.rs  listen.rs  main.rs  mcp.rs  peers.rs  send.rs  util.rs  verify.rs  whoami.rs
agent-mesh-cli/tests/: cli.rs  mcp_stdio.rs
agent-mesh-core/: Cargo.toml
agent-mesh-core/src/: agent_key.rs  error.rs  github_binding.rs  lib.rs  pyo3_module.rs  user_key.rs
agent-mesh-discovery/: Cargo.toml  README.md
agent-mesh-discovery/src/: announce.rs  browse.rs  lib.rs  peer.rs  pyo3_module.rs
agent-mesh-discovery/tests/: lan_smoke.rs
agent-mesh-protocol/: Cargo.toml  README.md
agent-mesh-protocol/src/: agent_key.rs  caveats.rs  envelope.rs  error.rs  fingerprint.rs  lib.rs  pyo3_module.rs  signer.rs  user_key.rs
agent-mesh-py/: Cargo.toml  README.md
agent-mesh-py/python/agent_mesh/: __init__.py  __main__.py  cli.py
agent-mesh-py/python/agent_mesh/amesh/: __init__.py  announce.py  bind.py  keygen.py  listen.py  peers.py  send.py  util.py  verify.py  whoami.py
agent-mesh-py/src/: lib.rs
agent-mesh-py/tests/: conftest.py  test_bus.py  test_cli.py  test_core.py  test_discovery.py  test_transport.py
agent-mesh-ratchet/: Cargo.toml  README.md
agent-mesh-ratchet/src/: account.rs  bundle.rs  error.rs  lib.rs  message.rs  session.rs
agent-mesh-ratchet/tests/: bundle_signing.rs  kat.rs  round_trip.rs
agent-mesh-transport/: Cargo.toml
agent-mesh-transport/src/: alpn.rs  endpoint.rs  error.rs  handshake.rs  identity.rs  lib.rs  pyo3_module.rs  resolver.rs  stream.rs
agent-mesh-transport/tests/: two_endpoint_smoke.rs
docs/decisions/: agent_mesh_store.md  bus_vs_nats.md
docs/logo/: README.md
docs/spikes/: 30-sas-transcript-binding.md
tests/common/: Cargo.toml
tests/common/src/: lib.rs
