[package]
name = "agent-mesh-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cryptographic identity types and signed envelopes for agent-mesh."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_bytes.workspace = true
ed25519-dalek.workspace = true
blake3.workspace = true
rand.workspace = true
hex.workspace = true
zeroize.workspace = true
ssh-key.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
