[package]
name = "agent-mesh-py"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Python bindings for agent-mesh"
publish = false

[lib]
name = "_agent_mesh"
crate-type = ["cdylib"]

[dependencies]
agent-mesh-core = { workspace = true, features = ["pyo3"] }
agent-mesh-discovery = { workspace = true, features = ["pyo3"] }
agent-mesh-transport = { workspace = true, features = ["pyo3"] }
agent-mesh-bus = { workspace = true, features = ["pyo3"] }
pyo3 = { workspace = true, features = ["extension-module"] }
pyo3-async-runtimes = { workspace = true, features = ["tokio-runtime"] }
tokio = { workspace = true }

[lints]
workspace = true
