[package]
name = "agent-mesh-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Authenticated QUIC transport for agent-mesh (iroh-net based)."
readme = "../README.md"

[dependencies]
agent-mesh-core.workspace = true
agent-mesh-discovery.workspace = true

iroh.workspace = true
tokio = { workspace = true }
async-trait.workspace = true
futures.workspace = true
bytes.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

tracing.workspace = true

[dev-dependencies]
tests-common.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true
serde_bytes.workspace = true

[lints]
workspace = true
